<resources>
    <string name="app_name">Remaining Application</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="fullname">Fullname</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="Title" />
    <string name="Discription" />
    <string name="Price" />
</resources>